# LingClaw

./: .gitignore  .lingclaw.json.example  Cargo.toml  LICENSE  README.md
.github/: copilot-instructions.md
.github/agents/: lingclaw.agent.md
.github/instructions/: rust-conventions.instructions.md
.github/prompts/: add-tool.prompt.md  check-budget.prompt.md
docs/: deploy.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: constants.ts  dom-extensions.d.ts  eventBus.ts  historyWindow.ts  images.ts  input.ts  main.ts  markdown.ts  mobile.ts  scroll.ts  settingsValidation.ts  socket.ts  state.ts  theme.ts  types.ts  utils.ts  viewState.ts
frontend/tests/: historyReasoningPanel.test.ts  historyWindow.test.ts  images.test.ts  lazy.test.ts  markdown.test.ts  orchestrateModal.test.ts  overlay.test.ts  settingsModels.test.ts  settingsPage.test.ts  settingsValidation.test.ts  subagentModal.test.ts  utils.test.ts
scripts/: install-linux.sh  install-windows.ps1
src/: agent.rs  cli.rs  commands.rs  config.rs  context.rs  hooks.rs  image_uploads.rs  main.rs  memory.rs  prompts.rs  providers.rs  runtime_loop.rs  session_admin.rs  session_store.rs  socket_sync.rs  socket_tasks.rs
src/runtime_loop/: socket_input.rs
src/subagents/: discovery.rs  executor.rs  mod.rs  orchestrator.rs
src/tests/: agent_tests.rs  cli_tests.rs  commands_tests.rs  config_tests.rs  hooks_tests.rs  image_uploads_tests.rs  main_tests.rs  mcp_tests.rs  memory_tests.rs  (+6 more)
static/: app.js  index.html  style.css  test.html
(+66 files in other folders)
