[package]
name = "lingclaw"
version = "0.5.6"
edition = "2024"
description = "A Rust personal AI assistant"
license = "MIT"

[dependencies]
axum = { version = "0.8", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream", "json"] }
futures = "0.3"
regex = "1"
tower-http = { version = "0.6", features = ["fs", "cors"] }
tokio-util = "0.7"
base64 = "0.22"
getrandom = "0.2"
chrono = { version = "0.4", features = ["clock"] }
hmac = "0.12"
md-5 = "0.10"
sha2 = "0.10"
rpassword = "7"
